--- a/CookBook/Views/Home/About.cshtml
+++ b/CookBook/Views/Home/About.cshtml
@@ -1,7 +1,34 @@
 ﻿@{
-    ViewBag.Title = "About";
+    ViewBag.Title = "Online Recipe Cookbook";
 }
-<h2>@ViewBag.Title.</h2>
-<h3>@ViewBag.Message</h3>
+<h2>@ViewBag.Title</h2>
 
-<p>Use this area to provide additional information.</p>
+<p>An online recipe cookbook.  This is an alpha version still under development.</p>
+
+<p>
+    Current features:
+    <ul>
+        <li>
+            Basic recipe creation and editing.
+        </li>
+    </ul>
+
+    Future features:
+    <ul>
+        <li>
+            Filter recipe searches using rating and type.
+        </li>
+        <li>
+            Notes for each recipe with user and user rating.
+        </li>
+        <li>
+            Recipe import from .fdx files (Living Cookbook)
+        </li>
+        <li>
+            Nutritional analysis using the FDA database
+        </li>
+        <li>
+            Sharing recipes with friends.
+        </li>
+    </ul>
+</p>
