Change create action to create a new empty recipe, then redirect to Edit.

--- a/CookBook/Views/Home/About.cshtml
+++ b/CookBook/Views/Home/About.cshtml
@@ -3,7 +3,7 @@
 }
 <h2>@ViewBag.Title</h2>
 
-<p>An online recipe cookbook.  This is an alpha version still under development.</p>
+<p>An application for managing and storing recipes on the web.  This is an alpha version still under development.</p>
 
 <p>
     Current features:
@@ -22,7 +22,7 @@
             Notes for each recipe with user and user rating.
         </li>
         <li>
-            Recipe import from .fdx files (Living Cookbook)
+            Import recipes from .fdx files (Living Cookbook)
         </li>
         <li>
             Nutritional analysis using the FDA database
