--- a/CookBook/Views/Home/Index.cshtml
+++ b/CookBook/Views/Home/Index.cshtml
@@ -4,5 +4,5 @@
 
 <div>
     <h1>A better homepage is coming soon!</h1>
-    <p>For now, take a look at the Recipes menu item.</p>
+    <p>For now, take a look at the <a href="/Recipes">Recipes</a> menu item.</p>
 </div>
