Added a 'make a copy' button to the details view, and created a copy action in the controller. Added suitable background image and added 'well' class to some divs

--- a/CookBook/Views/Home/About.cshtml
+++ b/CookBook/Views/Home/About.cshtml
@@ -19,6 +19,9 @@
             Filter recipe searches using rating and type.
         </li>
         <li>
+            Upload photographs of your favorite meals.
+        </li>
+        <li>
             Notes for each recipe with user and user rating.
         </li>
         <li>
