--- a/CookBook/Content/Site.css
+++ b/CookBook/Content/Site.css
@@ -1,6 +1,9 @@
 ﻿body {
     padding-top: 50px;
     padding-bottom: 20px;
+    background-image: url('images/food12 transparent.jpg');
+    background-repeat:no-repeat;
+    background-size:100%;
 }
 
 /* Set padding to keep content from hitting the edges */
