--- a/CookBook/Views/Recipes/Details.cshtml
+++ b/CookBook/Views/Recipes/Details.cshtml
@@ -18,6 +18,10 @@
             class="btn">
         Delete
     </button>
+    <button type="button" onclick='location.href="@Url.Action("Copy", "Recipes", new { id = Model.RecipeID})"'
+            class="btn">
+        Make a Copy
+    </button>
 </div>
 <h2>
     @Html.DisplayFor(model => model.Name)
