Added UserID checks to actions on the recipe controller.

--- a/CookBook/Views/Recipes/Edit.cshtml
+++ b/CookBook/Views/Recipes/Edit.cshtml
@@ -27,6 +27,7 @@
 
     <div id="recipeEditPage" class="form-horizontal">
         @Html.HiddenFor(model => model.RecipeID)
+        @Html.HiddenFor(model => model.UserID)
 
         <div id="recipe" class="well">
             <div class="form-group row">
