--- a/CookBook/Views/Home/About.cshtml
+++ b/CookBook/Views/Home/About.cshtml
@@ -33,5 +33,11 @@
         <li>
             Sharing recipes with friends.
         </li>
+        <li>
+            Login using Facebook or Google
+        </li>
+        <li>
+            Android mobile app for viewing and sharing your recipes
+        </li>
     </ul>
 </p>
